--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stripe": "^12.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "nodemon": "^2.0.22"
   }
 }
